# sandbox-gstr1-mcp

./: .gitignore  CLAUDE_INTEGRATION.md  CONFIGURATION.md  Dockerfile  EXAMPLES.md  GITHUB_README.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh  server.py  setup.sh  test_server.py
